--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.21.2",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "uuid": "^11.0.3"
   }
 }
